# ImageUpscalerQt

./: .gitignore  AUTHORS  CMakeLists.txt  Dependencies.txt  ImageUpscalerQt.kdev4  README.md  com.graphene9932.ImageUpscalerQt.desktop  com.graphene9932.ImageUpscalerQt.yml
.kdev4/: ImageUpscalerQt.kdev4
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  imageupscalerqt
debug/.cmake/api/v1/reply/: cmakeFiles-v1-f4d8cc8785c83c1042c3.json  codemodel-v2-e956230a19bc1e71c4fa.json  index-2021-05-12T17-05-28-0164.json  target-imageupscalerqt-Debug-af2a9c34dc22a940249f.json  target-imageupscalerqt_autogen-Debug-3873ae33d2575afe364f.json  target-imageupscalerqt_autogen_timestamp_deps-Debug-167e2844ad21024ce9ca.json
debug/imageupscalerqt_autogen/: deps  mocs_compilation.cpp
debug/imageupscalerqt_autogen/3LXPKN4LCA/: moc_imageupscalerqt.cpp.d
debug/imageupscalerqt_autogen/UVLADIE3JM/: moc_imageupscalerqt.cpp.d
res/: 3-1-3-2 128-16-32.pt  3-1-3-4 512-32-64.pt  3-1-3-6 256-32-64.pt  3-1-3-6 512-32-64.pt  3-1-9 48-24.pt  3-1-9 64-32.pt  5-1-7 48-24.pt  5-1-7 64-32.pt  5-1-9 64-32.pt  resources.qrc
res/FSRCNN/: 3-1-3-2 256-32-64.pt  3-1-3-4 128-16-32.pt  5-1-3-1-9 128-16-48-128.pt  5-1-3-1-9 256-16-48-256.pt  5-1-3-1-9 384-16-48-384.pt  5-1-3-1-9 512-16-48-512.pt  5-1-3-3-1-9 128-16-48-48-128.pt  5-1-3-3-1-9 256-16-48-48-256.pt  5-1-3-3-1-9 384-16-48-48-384.pt  5-1-3-3-1-9 512-16-48-48-512.pt  5-1-3-3-3-1-9 128-16-48-48-48-128.pt  5-1-3-3-3-1-9 256-16-48-48-48-256.pt  5-1-3-3-3-1-9 384-16-48-48-48-384.pt  5-1-3-3-3-1-9 512-16-48-48-48-512.pt
res/SRCNN/: 5-1-9 48-24.pt  9-3-5 112-32.pt  9-3-5 112-48.pt  9-3-5 112-64.pt  9-3-5 112-80.pt  9-3-5 112-96.pt  9-3-5 128-32.pt  9-3-5 128-48.pt  9-3-5 128-64.pt  9-3-5 128-80.pt  9-3-5 128-96.pt  9-3-5 48-32.pt  9-3-5 48-48.pt  9-3-5 48-64.pt  9-3-5 48-80.pt  9-3-5 48-96.pt  9-3-5 64-32.pt  9-3-5 64-48.pt  9-3-5 64-64.pt  9-3-5 64-80.pt  9-3-5 64-96.pt  9-3-5 80-32.pt  9-3-5 80-48.pt  9-3-5 80-64.pt  9-3-5 80-80.pt  9-3-5 80-96.pt  9-3-5 96-32.pt  9-3-5 96-48.pt  9-3-5 96-64.pt  9-3-5 96-80.pt  9-3-5 96-96.pt
res/to_bin/FSRCNN/: 3-1-3-2 512-32-64.pt  3-1-3-4 256-32-64.pt  3-1-3-6 128-16-32.pt
res/to_bin/SRCNN/: 3-3-9 128-64.pt  3-3-9 64-32.pt  5-3-7 128-64.pt  5-3-7 64-32.pt  5-3-9 128-64.pt  5-3-9 64-32.pt
src/: Algorithms.cpp  Algorithms.h  main.cpp
src/functions/: calc_func.cpp  func.h  func.hpp  string_func.cpp
src/nn/: FSRCNN.cpp  FSRCNN.h  FSRCNN.hpp  SRCNN.cpp  SRCNN.h  SRCNN.hpp
src/task/: Task.h  TaskFSRCNN.cpp  TaskFSRCNN.h  TaskResize.cpp  TaskResize.h  TaskSRCNN.cpp  TaskSRCNN.h
src/tasks/: Task.h  Task.hpp  TaskConvertColorSpace.cpp  TaskConvertColorSpace.h  TaskConvertColorSpace.hpp  TaskDesc.cpp  TaskDesc.h  TaskDesc.hpp  TaskFSRCNN.cpp  TaskFSRCNN.h  TaskFSRCNN.hpp  TaskResize.cpp  TaskResize.h  TaskResize.hpp  TaskSRCNN.cpp  TaskSRCNN.h  TaskSRCNN.hpp  Worker.cpp  Worker.h  Worker.hpp
src/windows/: ImageUpscalerQt.cpp  ImageUpscalerQt.h  ImageUpscalerQt.hpp  ImageUpscalerQt.ui  TaskCreationDialog.cpp  TaskCreationDialog.h  TaskCreationDialog.hpp  TaskCreationDialog.ui  TasksWaitingDialog.cpp  TasksWaitingDialog.h  TasksWaitingDialog.hpp  TasksWaitingDialog.ui  imageupscalerqt.cpp  imageupscalerqt.h  imageupscalerqt.ui  taskswaitingdialog.cpp  taskswaitingdialog.h  taskswaitingdialog.ui
